# VectHoriVert

./: 01.txt  02.txt  03.txt  CMakeLists.txt  VectHoriVert.cbp  VectHoriVert.depend  VectHoriVert.layout  input.txt  main.cpp
Factory/: Fabric.h
VectTypes/: Vect.cpp  Vect.hpp  VectHori.cpp  VectHori.hpp  VectVert.cpp  VectVert.hpp
